client-data/tools/katex/katex.css
#katexToolInput {
	position:fixed;
	top:-1000px; /*Hidden*/
	left: 80px;
	width:500px;
}
#katexToolInput:focus {
	top: 5px;
}

text {
	font-family:"Arial", "Helvetica", sans-serif;
	user-select:none;
	-moz-user-select:none;
}

foreignObject {
	overflow: visible;
	user-select:none;
	-moz-user-select:none;
}

